# pdsdk

./: .gitattributes  .gitmodules  .rules  NOTES.md  README.md  TASKS.md  justfile
.github/workflows/: examples.yml  integration.yml  native.yml
apps/android/: build.gradle.kts  settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/android/app/src/androidTest/java/com/bignextthing/eurosky3000/: ExampleInstrumentedTest.kt
apps/android/app/src/main/java/com/bignextthing/eurosky3000/: MainActivity.kt
apps/android/app/src/main/java/com/bignextthing/eurosky3000/ui/theme/: Color.kt  Theme.kt  Type.kt
apps/android/app/src/test/java/com/bignextthing/eurosky3000/: ExampleUnitTest.kt
apps/android/gradle/wrapper/: gradle-wrapper.properties
apps/ios/: .gitignore  README.md  justfile
apps/ios/example/: ContentView.swift
apps/ios/example.xcodeproj/: project.pbxproj
apps/ios/example.xcodeproj/project.xcworkspace/xcuserdata/yawn.xcuserdatad/: UserInterfaceState.xcuserstate
apps/web/: Caddyfile  index.html  js
apps/web/tmp/: .gitignore
native/: Cargo.toml  rust-toolchain.toml
native/fixtures/: seabass.bsky.social.20250617001719.car
native/pdsdk/: Cargo.toml  build.rs  justfile  rust-toolchain.toml  uniffi.toml
native/pdsdk/src/: exp.rs  lib.rs  report.rs
pkgs/aar/: .gitignore  build.gradle.kts  settings.gradle.kts
pkgs/rnp/: CONTRIBUTING.md  LICENSE  Pdsdk.podspec  README.md  package.json  tsconfig.json
pkgs/rnp/android/: build.gradle  gradle.properties
pkgs/rnp/android/src/main/java/com/pdsdk/: PdsdkModule.kt  PdsdkPackage.kt
pkgs/rnp/example/: app.json  package.json
pkgs/rnp/example/android/: settings.gradle
pkgs/rnp/example/android/app/: build.gradle
pkgs/rnp/example/android/app/src/main/java/pdsdk/example/: MainActivity.kt  MainApplication.kt
pkgs/rnp/example/android/app/src/main/res/values/: strings.xml
pkgs/rnp/example/ios/: Podfile
pkgs/rnp/example/ios/PdsdkExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
pkgs/rnp/example/ios/PdsdkExample.xcodeproj/: project.pbxproj
pkgs/rnp/example/ios/PdsdkExample.xcodeproj/xcshareddata/xcschemes/: PdsdkExample.xcscheme
pkgs/rnp/example/src/: App.tsx
pkgs/rnp/ios/: Pdsdk.h  Pdsdk.mm
pkgs/rnp/src/: NativePdsdk.ts  index.tsx
pkgs/swift/: .gitignore  Package.swift  justfile
pkgs/swift/PdSdkFramework.xcframework/: Info.plist
pkgs/swift/Sources/PdSdk/: pdsdk.swift
pkgs/swift/Tests/PdSdkTests/: PdSdkTests.swift
refs/: README.md  justfile
refs/pds/: .env
