[package]
name = "pdsdk"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bindgen"
path = "src/bindgen.rs"
required-features = ["bindgen"]

[[bin]]
name = "exp"
path = "src/exp.rs"

[lib]
# TODO: scope libraries per target (https://github.com/rust-lang/cargo/issues/12260)
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
# TODO: Replace async-std with futures
async-std = "1.13"
async-trait = "0.1"
thiserror = "2.0"
uniffi = { version = "0.29" }
tracing = "0.1"

futures = { version = "0.3", default-features = false, features = ["std"] }
ipld-core = { version = "0.4", default-features = false, features = ["std"] }
minicbor = { version = "1.0", features = ["half"] }
ring = "0.17"
unsigned-varint = { version = "0.8.0", features = ["futures"] }

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[dev-dependencies]
smol = "2.0"

[features]
bindgen = ["uniffi/cli"]
extended = []
