[package]
name = "pdsdk"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bindgen"
path = "src/bindgen.rs"
required-features = ["bindgen"]

[[bin]]
name = "exp"
path = "src/exp.rs"

[lib]
# TODO: scope libraries per target (https://github.com/rust-lang/cargo/issues/12260)
crate-type = ["lib", "cdylib", "staticlib"]

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies]
async-trait = "0.1"
futures = { version = "0.3", default-features = false, features = ["std"] }
ipld-core = { version = "0.4", default-features = false, features = ["std"] }
minicbor = { version = "1.0", features = ["half"] }
thiserror = "2.0"
tracing = "0.1"
unsigned-varint = { version = "0.8.0", features = ["futures"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ring = { version = "0.17", features = ["std"] }
smol = { version = "2.0" }
uniffi = "0.29"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
ring = { version = "0.17", features = ["std", "wasm32_unknown_unknown_js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window"] }

[features]
bindgen = ["uniffi/cli"]
